--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <li><a href="#">NFT Art</a></li>
                         </ul>
                     </div> 
-            </div>
+            </div> loser
 
 
         </div>
